Project upgraded to JDK 20